Compare methods + include routes figures

--- a/presentation_larp.ipynb
+++ b/presentation_larp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -220,14 +220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Route found: True\n"
+      "Route found: True\n",
+      "Distance to target: 0.0\n"
      ]
     },
     {
@@ -261,6 +262,7 @@
     "print(f\"Route found: {route is not None}\")\n",
     "\n",
     "route_path = larp.graph.RouteGraph.route_to_lines_collection(start, end, route, remapped=True)\n",
+    "print(f\"Distance to target: {(end - route_path[-1])@(end - route_path[-1])}\")\n",
     "\n",
     "plt.figure(dpi=150)\n",
     "plt.imshow(display, cmap='jet', extent=field.get_extent(), alpha=0.8)\n",
@@ -297,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
